The OplogBatcher loop should retry on WriteConflictExceptions

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.3
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-12-16, Execution Team 2019-12-30
    • 20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There are a few places in OplogBatcher::_run that access the storage engine, like getBatchLimitOplogBytes(), which reads from the DurableCatalog.

      WT may occasionally return WT_ROLLBACK for reads when the cache is full, so this internal thread needs to be able to handle the possibility of a WriteConflictException without it escaping.

            Assignee:
            Louis Williams
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: