SERVER-45146 StorageInterfaceImpl::getOplogMaxSize should handle WriteConflictExceptions